<resources>
    <string name="app_name">Assignment</string>


    <string name="company_name">Comapny Name*</string>
    <string name="tin">TIN*</string>
    <string name="company_pan">Company PAN*</string>
    <string name="service_tax_number">Service Tax Number</string>
    <string name="proprietor_s_name">Proprietor\'s Name</string>
    <string name="established">Established</string>
    <string name="address_line_1">Address Line 1*</string>
    <string name="address_line_2">Address Line 2*</string>
    <string name="state">State*</string>
    <string name="city">City*</string>
    <string name="pin_code">Pin Code*</string>
    <string name="any_contact_at_msupply">Any Contact at mSupply?*</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


    <string-array name="fragment_list">
        <item>Android</item>
        <item>Windows</item>
        <item>IPhone</item>
        <item>Ubuntu</item>
        <item>Linux</item>
    </string-array>


    <string-array name="established">
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
    </string-array>


    <string-array name="state">
        <item>Haryana</item>
        <item>Karnataka</item>
        <item>Punjab</item>
        <item>Uttar Pradesh</item>
        <item>Madhya Pradesh</item>
    </string-array>


    <string name="Haryana">Hello Haryana</string>
    <string-array name="haryana_city">
        <item>Kurukshetra</item>
        <item>Jind</item>
        <item>Karnal</item>
        <item>Panipat</item>
        <item>Ambala</item>
    </string-array>


    <string-array name="karnataka_city">
        <item>Hassan</item>
        <item>Kodagu</item>
        <item>Mandya</item>
        <item>Mysuru</item>
        <item>Udupi</item>
    </string-array>

    <string-array name="punjab_city">
        <item>Mohali</item>
        <item>Patiala</item>
        <item>Ludhiana</item>
        <item>Jalandhar</item>
        <item>Hoshiarpur</item>
    </string-array>

    <string-array name="up_city">
        <item>Agra</item>
        <item>Aligarh</item>
        <item>Allahabad</item>
        <item>Mathura</item>
        <item>Fatehpur</item>
    </string-array>

    <string-array name="mp_city">
        <item>Bhopal</item>
        <item>Morena</item>
        <item>Gwalior</item>
        <item>Indore</item>
        <item>Ujjain</item>
    </string-array>

    <string-array name="picode">
        <item>560102</item>
        <item>560112</item>
        <item>568975</item>
        <item>597895</item>
        <item>002365</item>
    </string-array>

    <string-array name="country_array">
        <item>India</item>
        <item>UK</item>
        <item>US</item>
    </string-array>

    <string-array name="address_type">
        <item>Shippng</item>
        <item>Billing</item>
        <item>Shipping and Billing</item>
    </string-array>


    <string name="title_activity_display_data">DisplayData</string>
    <string name="title_activity_assign_ment">AssignMent</string>
    <string name="assignment1">Assignment One Validation</string>
    <string name="assignment2">Assignment Second RecyclerView</string>
    <string name="title_activity_add_address">AddAddress</string>
    <string name="title_activity_update_address">UpdateAddress</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="street_address">Street Address 1*</string>
    <string name="street_address2">Street Address 2</string>
    <string name="mobile_number">Mobile Number*</string>
    <string name="country">Country*</string>
    <string name="address_type">Address Type*</string>
    <string name="updateaddress">Update Address</string>
    <string name="assignment3">Assignment Third Fragment</string>
    <string name="new_fragment">New Fragment</string>
    <string name="title_activity_fragment4">Fragment4</string>
    <string name="assgiment4">Assigment 4th PageViewer</string>
    <string name="assignment5">Assignment 5th TabView</string>
    <string name="assignment6">Assignment 6th ExpandableView</string>
    <string name="assignment7">Assignment 7th ListFragment</string>
    <string name="assignment8">Assignment 8th with recyclerview and progressbar</string>
    <string name="assignment9">Assignment 9th JSON</string>
    <string name="assignment10">Assignment 10th DataBase</string>


</resources>
