<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Add New Company"
        android:textSize="20dp"
        android:textColor="@color/blackColor"
        android:paddingTop="10dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rectangle"
            android:layout_marginTop="5dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company_name"
            android:padding="5dp"
            android:textColor="@color/colorAccent"
            />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/company_name"
                android:background="@drawable/rectangle"
                android:inputType="text|textNoSuggestions"
               />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tin"
                android:padding="5dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tin_number"
                android:background="@drawable/rectangle"
                android:maxLength="11"
                android:digits="0123456789"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_pan"
                android:padding="5dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle"
                android:id="@+id/pan_number"
                android:maxLength="10"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/service_tax_number"
                android:padding="5dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle"
                android:id="@+id/tax_number"
                android:maxLength="15"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/proprietor_s_name"
                    android:padding="5dp"
                    android:layout_weight="50"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/established"
                    android:layout_weight="50"
                    android:padding="5dp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:background="@drawable/rectangle"
                    android:layout_marginRight="10dp"
                    android:id="@+id/property_name"
                    />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:background="@drawable/rectangle">

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/established"
                        android:spinnerMode="dropdown"
                        android:layout_alignParentBottom="true" />



                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address_line_1"
                android:padding="5dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/address_line1"
                android:background="@drawable/rectangle"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address_line_2"
                android:padding="5dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/address_line2"
                android:background="@drawable/rectangle"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/state"
                    android:padding="5dp"
                    android:layout_weight="1"

                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:padding="5dp"
                    android:layout_weight="1"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:background="@drawable/rectangle"
                    android:layout_marginRight="10dp">

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/state"
                        android:spinnerMode="dropdown"/>


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:background="@drawable/rectangle">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/city"
                    android:spinnerMode="dropdown"
                    />

                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pin_code"
                android:padding="5dp"
                />

            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/pin_code"
                android:background="@drawable/rectangle"
                android:digits="0123456789"
                android:maxLength="6"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/any_contact_at_msupply"
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:layout_weight="50"/>


                <RadioGroup
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="50">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/yes"
                    android:checked="true"
                    android:id="@+id/yes"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:id="@+id/no"
                    />

                </RadioGroup>

            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle"
                android:hint="Provide mSupply representitve's name here"
                android:layout_marginBottom="10dp"
                android:editable="true"
                android:id="@+id/providemsupply"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="Save"
                android:id="@+id/save_data"
                />

        </LinearLayout>

    </LinearLayout>

    </ScrollView>








</LinearLayout>
