<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="60dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Add Address"
        android:textSize="20dp"
        android:textColor="@color/blackColor"
        android:paddingTop="10dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/rectangle"
                android:layout_marginTop="5dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:padding="5dp"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/first_name"
                    android:background="@drawable/rectangle"
                    android:inputType="text|textNoSuggestions"
                    />



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:padding="5dp"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/last_name"
                    android:background="@drawable/rectangle" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/street_address"
                    android:padding="5dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle"
                    android:id="@+id/street_address1"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/street_address2"
                    android:padding="5dp"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle"
                    android:id="@+id/street_address2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile_number"
                    android:padding="5dp"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/mobile_number"
                    android:background="@drawable/rectangle"
                    android:inputType="number"
                    android:maxLength="10"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/state"
                        android:padding="5dp"
                        android:layout_weight="1"

                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/city"
                        android:padding="5dp"
                        android:layout_weight="1"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="50"
                        android:background="@drawable/rectangle"
                        android:layout_marginRight="10dp">

                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/state"
                            android:spinnerMode="dropdown"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="50"
                        android:background="@drawable/rectangle">

                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/city"
                            android:spinnerMode="dropdown"
                            />

                    </RelativeLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/country"
                        android:padding="5dp"
                        android:layout_weight="1"

                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/pin_code"
                        android:padding="5dp"
                        android:layout_weight="1"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="50"
                        android:background="@drawable/rectangle"
                        android:layout_marginRight="10dp">

                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/country_name"
                            android:spinnerMode="dropdown"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="50"
                        android:background="@drawable/rectangle">

                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/pin_code"
                            android:spinnerMode="dropdown"
                            />

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/address_type"
                        android:padding="5dp"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="50"
                        android:background="@drawable/rectangle"
                        android:layout_marginRight="10dp">

                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/address_type"
                            android:spinnerMode="dropdown"/>

                    </RelativeLayout>

                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/updateaddress"
                    android:id="@+id/update_address"
                    />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
